...
      }}
    >
      <Tab.Screen
        name="MoviesTab"
        component={MoviesStack}
        options={{
          title: 'Movies',
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="film" color={color} focused={focused} />
          ),
        }}
      />
      <Tab.Screen
        name="SavedTab"
        component={SavedStack}
        options={{
          title: 'Saved',
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name="bookmark" color={color} focused={focused} />
          ),
          tabBarAccessibilityLabel: "saved-tab",
        }}
      />
...
